--- a/scc/styles.css
+++ b/scc/styles.css
@@ -10,7 +10,7 @@ html {
 
 :root {
   --white-color: #ffffff;
-  --header-color: #e7e9fc;
+  --border-filter-color: #e7e9fc;
   --main-color: #434455;
   --background-color: #e5e5e5;
   --brend-color: #4d5ae5;
@@ -29,6 +29,12 @@ ul {
   list-style: none;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .container {
   max-width: 1158px;
   padding: 0 15px;
@@ -38,6 +44,7 @@ ul {
 /*header*/
 .header {
   outline: 2px solid red;
+  border-bottom: 1px solid var(--border-filter-color);
 }
 
 .container-nav {
@@ -129,6 +136,7 @@ ul {
 }
 .hero-title {
   width: 494px;
+  padding-bottom: 48px;
   display: inline-block;
   margin: 0px;
 
@@ -143,7 +151,7 @@ ul {
   margin-right: auto;
   background: var(--brend-color);
   color: var(--white-color);
-
+  border: 1px;
   border-radius: 4px;
   font-weight: 500;
 
@@ -155,11 +163,12 @@ ul {
   /*padding-right: 24px;*/
   width: calc((100% - 72px) / 4);
 }
+
 .features-list {
   gap: 24px;
   display: flex;
-  padding: 120px; /*0px 0px 0px;*/
-  margin: 0px 0px 120px 0px;
+  margin: 0px;
+  padding: 120px 0px 120px 0px;
 
   outline: 2px solid red;
 }
@@ -231,14 +240,22 @@ ul {
   /* flex-basis: calc((100%-72px) / 4); */
 }
 
-.container > .team-list {
+.team-list {
   text-align: center;
   outline: 2px solid red;
 }
 
 /*portfolio*/
 
+.list-filter {
+  gap: 24px;
+  justify-content: center;
+  display: flex;
+  margin: 0px;
+  padding: 96px 0px 72px 0px;
+}
 .button-filter {
+  padding: 12px 24px 12px 24px;
   background: #f4f4fd;
   cursor: pointer;
   border: 1px solid #e7e9fc;
@@ -253,7 +270,34 @@ ul {
 .button-filter-text:hover {
   color: var(--white-color);
 }
+
+.flex-container {
+  /* display: flex;
+  flex-wrap: wrap; */
+}
+.list-element-filter {
+  padding: 0px;
+  margin: 0px;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .filter-item {
+  width: 360px;
+  margin-right: 24px;
+  margin-bottom: 48px;
+  border: 1px solid var(--border-filter-color);
+}
+
+.filter-item:nth-child(3n) {
+  margin-right: 0px;
+}
+.filter-item:nth-last-child(-n + 3) {
+  margin-bottom: 120px;
+}
+.filter-item > img {
+  padding-bottom: 32px;
 }
 
 /*footer-text*/
@@ -266,6 +310,7 @@ ul {
   padding: 100px 0px 100px 0px;
 }
 .footer-text {
+  padding-top: 16px;
   max-width: 264px;
   padding: 0px;
   margin: 0px;
@@ -274,6 +319,10 @@ ul {
   letter-spacing: 0.02em;
 }
 .footer .logo-second {
-  padding-top: 100px;
+  display: block;
   color: var(--white-color);
+}
+
+.block-footer > a {
+  padding-bottom: 16px;
 }
