--- a/scc/styles.css
+++ b/scc/styles.css
@@ -43,7 +43,7 @@ img {
 
 /*header*/
 .header {
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
   border-bottom: 1px solid var(--border-filter-color);
 }
 
@@ -132,7 +132,7 @@ img {
 
   text-align: center;
   background: var(--title-color);
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
 }
 .hero-title {
   width: 494px;
@@ -158,9 +158,9 @@ img {
   letter-spacing: 0.04em;
 }
 
-/*section-features*/
+/*section-features */
 .features-list > li {
-  /*padding-right: 24px;*/
+  /* padding-right: 24px; */
   width: calc((100% - 72px) / 4);
 }
 
@@ -170,7 +170,7 @@ img {
   margin: 0px;
   padding: 120px 0px 120px 0px;
 
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
 }
 
 .section-subtile {
@@ -195,7 +195,7 @@ img {
 /*section-What are we doing*/
 .Our-Team {
   background: var(--background-color-team);
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
 }
 .section-title {
   text-align: center;
@@ -212,7 +212,7 @@ img {
   display: flex;
   margin: 0px;
   padding-left: 0px;
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
 }
 
 .section-img > li {
@@ -242,7 +242,7 @@ img {
 
 .team-list {
   text-align: center;
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
 }
 
 /*portfolio*/
@@ -302,7 +302,7 @@ img {
 
 /*footer-text*/
 .footer {
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
   background-color: var(--title-color);
 }
 
