--- a/scc/styles.css
+++ b/scc/styles.css
@@ -25,6 +25,18 @@ body {
   font-size: 16px;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  padding: 0;
+  margin: 0;
+}
+
 ul {
   list-style: none;
 }
@@ -47,13 +59,19 @@ img {
   border-bottom: 1px solid var(--border-filter-color);
 }
 
+.header-container {
+  justify-content: space-between;
+
+  display: flex;
+  align-items: center;
+}
 .container-nav {
   align-items: center;
   display: flex;
 }
 
 .logo {
-  padding-right: 76px;
+  margin-right: 76px;
 }
 .logo-fisrt {
   color: var(--brend-color);
@@ -74,10 +92,7 @@ img {
 
 .site-nav {
   gap: 40px;
-
   display: flex;
-  margin: 0;
-  padding: 0;
 }
 
 .nav-link {
@@ -102,15 +117,9 @@ img {
   color: var(--active-color);
 }
 
-.address-container {
-  display: flex;
-}
 .address {
-  padding: 24px 0px 24px 0px;
   gap: 40px;
   display: flex;
-  margin: 0px;
-
   color: var(--main-color);
 }
 .address-link {
@@ -121,14 +130,9 @@ img {
   text-decoration: none;
 }
 
-.nav-address {
-  justify-content: space-between;
-  display: flex;
-}
-
 /*hero*/
 .hero {
-  padding: 188px 0px 188px 0px;
+  padding: 188px 0px;
 
   text-align: center;
   background: var(--title-color);
@@ -136,9 +140,8 @@ img {
 }
 .hero-title {
   width: 494px;
-  padding-bottom: 48px;
+  margin-bottom: 48px;
   display: inline-block;
-  margin: 0px;
 
   color: var(--white-color);
   font-size: 56px;
@@ -159,24 +162,24 @@ img {
 }
 
 /*section-features */
+.features {
+  padding-top: 120px;
+}
+
 .features-list > li {
-  /* padding-right: 24px; */
   width: calc((100% - 72px) / 4);
 }
 
 .features-list {
   gap: 24px;
   display: flex;
-  margin: 0px;
-  padding: 120px 0px 120px 0px;
 
   /* outline: 2px solid red; */
 }
 
 .section-subtile {
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 
-  margin: 0px;
   color: var(--title-color);
   font-weight: 500;
   font-size: 20px;
@@ -184,8 +187,6 @@ img {
   letter-spacing: 0.02em;
 }
 .section-paragraph {
-  padding-bottom: 32px;
-  margin: 0px;
   color: var(--main-color);
 
   line-height: 1.5;
@@ -193,14 +194,19 @@ img {
 }
 
 /*section-What are we doing*/
-.Our-Team {
+.about {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.team {
   background: var(--background-color-team);
   /* outline: 2px solid red; */
 }
 .section-title {
   text-align: center;
-  margin: 0px;
-  padding: 120px 0px 72px 0px;
+  margin-bottom: 72px;
+
   color: var(--title-color);
   font-size: 36px;
   line-height: 1.1;
@@ -210,33 +216,27 @@ img {
 
 .section-img {
   display: flex;
-  margin: 0px;
-  padding-left: 0px;
+  gap: 24px;
+
   /* outline: 2px solid red; */
 }
 
-.section-img > li {
-  padding-right: 24px;
-  padding-bottom: 120px;
-  /* width: calc((100% - 48px) / 3); */
-}
-
-.team {
+.team-item {
+  padding-bottom: 32px;
   background-color: var(--white-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
 }
 
-.team > img {
-  padding-bottom: 32px;
+.team-item > img {
+  margin-bottom: 32px;
 }
 .team-list {
   gap: 24px;
   display: flex;
   padding: 0px 0px 120px 0px;
 
-  margin: 0px;
   /* flex-basis: calc((100%-72px) / 4); */
 }
 
@@ -251,8 +251,8 @@ img {
   gap: 24px;
   justify-content: center;
   display: flex;
-  margin: 0px;
-  padding: 96px 0px 72px 0px;
+  padding-top: 96px;
+  margin-bottom: 72px;
 }
 .button-filter {
   padding: 12px 24px 12px 24px;
@@ -271,54 +271,49 @@ img {
   color: var(--white-color);
 }
 
-.flex-container {
-  /* display: flex;
-  flex-wrap: wrap; */
-}
 .list-element-filter {
-  padding: 0px;
-  margin: 0px;
-  text-align: center;
+  gap: 48px 24px;
+  padding-bottom: 120px;
   display: flex;
   flex-wrap: wrap;
 }
 
 .filter-item {
   width: 360px;
-  margin-right: 24px;
-  margin-bottom: 48px;
-  border: 1px solid var(--border-filter-color);
 }
 
-.filter-item:nth-child(3n) {
+/* .filter-item:nth-child(3n) {
   margin-right: 0px;
-}
-.filter-item:nth-last-child(-n + 3) {
-  margin-bottom: 120px;
-}
-.filter-item > img {
+} */
+
+.project-container {
+  padding-top: 32px;
   padding-bottom: 32px;
+  padding-left: 16px;
+
+  border-left: 1px solid var(--border-filter-color);
+  border-right: 1px solid var(--border-filter-color);
+  border-bottom: 1px solid var(--border-filter-color);
 }
 
 /*footer-text*/
-.footer {
-  /* outline: 2px solid red; */
+.section-footer {
+  padding-top: 100px;
+  padding-bottom: 100px;
   background-color: var(--title-color);
 }
 
-.block-footer {
-  padding: 100px 0px 100px 0px;
+.container-footer {
+  background-color: var(--title-color);
 }
 .footer-text {
-  padding-top: 16px;
   max-width: 264px;
-  padding: 0px;
-  margin: 0px;
   color: #e7e9fc;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.footer .logo-second {
+.section-footer .logo-second {
+  margin-bottom: 16px;
   display: block;
   color: var(--white-color);
 }
