--- a/scc/styles.css
+++ b/scc/styles.css
@@ -145,10 +145,21 @@ img {
 /*hero*/
 .hero {
   padding: 188px 0px;
+  height: 600px;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
+  background-color: var(--title-color);
 
   text-align: center;
-  background: var(--title-color);
-  /* outline: 2px solid red; */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .hero-title {
   width: 494px;
@@ -297,6 +308,10 @@ img {
 
 .filter-item {
   width: 360px;
+}
+
+.filter-item > a {
+  text-decoration: none;
 }
 
 /* .filter-item:nth-child(3n) {
